# Property_Management_Project

./: README.md  yezhu.cpp
Chen_Honghui_Folder/: main.c  owner.txt  record.txt  staff.txt
Jin_Hongxiu_Folder/: fee.txt  functions.c  gongneng.c  head.h  more_functions.c  signin&register.c  signin_register.c  tou.h  user.txt  workers.txt  zhu.c
Li_Bolin_Folder/: index.html  second_index.html
Li_Bolin_Folder/backend_files/: CMakeLists.txt
Li_Bolin_Folder/backend_files/src/: Management.c  Management.h
Li_Bolin_Folder/integrated_result/: CMakeLists.txt
Li_Bolin_Folder/integrated_result/include/: grid_map.hpp  main.h  manager.h  owner.h  server.h
Li_Bolin_Folder/integrated_result/src/: grid_map.cpp  main.c  manager.c  manager.cpp  owner.c  server.c  server.cpp
Li_Bolin_Folder/manager_files/: alignment.html  info_consult.html  manager.html
Li_Bolin_Folder/manager_files/info_consult_files/: all_info.html  money_situation.html  somebody_info.html
Li_Bolin_Folder/manager_files/info_management_files/: revise_somebody_info.html
Tian_Jiaqiang_Folder/: Manager.c  Manager.h  Manager.txt  main.c
